# Speckegomotion

./: .gitignore  Bechmark.py  Characteriseattention.py  CreateKernel.py  CreateStimuli.py  EVIMOattention.py  EVIMObenchmark.py  LLE-VOS.py  LLE-VOSev2frames.py  LoadEVIMO.py  LoadEVIMOIoUs.py  LoadResults.py  MainDVSegomotion.py  MainSpeckOMSAttention.py  MainSpeckegomotion.py  MainSpeckegomotionMP.py  PanTiltSetup.py  README.md  RasterPlot.py  SpeckOMSattention.py  Speckegolayer_functions.py  characterisationOMS.py  characteriseattention.py  config.py  configSpeckmain.py  configmain.py  demo.py  dog_kernel.npy  egomotionlayer.py  egomotionlayer_functions.py  h5Tonpy.py  main.py  mainegomotion.py  pyproject.toml  requirements.txt  scanpath.py
Analyses/: AnalysisCharacterisationOMS.py  AnalysisLLE-VOS.py  EVIMOresults.py
controller/: __init__.py  helper.py  nengo_controller.py
egomotion/: conf.py
egomotion/controllers/: __init__.py  hub.py  ncon.py
egomotion/devices/: __init__.py  camera.py  pantilt.py
egomotion/experiments/: main.py
egomotion/network/: __init__.py  attention.py  kernels.py  wta.py
egomotion/tests/: metadata.py
egomotion/utils/: __init__.py  functions.py  loading.py  plotting.py  types.py
functions/: Analysis Results.py  CreateKernel.py  OMS_helpers.py  Speck_funcs.py  Speck_helpers.py  attention_helpers.py  attention_simple_helpers.py  createVMkernel.py  create_gratings_stimuli.py  data_helpers.py  h5Tonpy.py
test/: test_nengo_controller.py
